<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/movie_detail"
    tools:context=".MovieDetail">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:background="@color/background">
        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            tools:ignore="RtlSymmetry"
            />
        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_toEndOf="@id/img_poster"
            android:layout_toRightOf="@id/img_poster"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/name"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/movie_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_title"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/img_poster"
            android:layout_toRightOf="@+id/img_poster"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/tanggal"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/img_poster"
            android:layout_toRightOf="@+id/img_poster"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/view" />
        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_date"
            android:layout_toEndOf="@id/view"
            android:layout_toRightOf="@id/view"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:ignore="RtlSymmetry" />
        <RatingBar
            android:id="@+id/ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/movie_rating"
            android:scaleX="0.3"
            android:scaleY="0.3"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:text="@string/deskripsi_film"
        android:layout_marginStart="@dimen/activity_vertical_margin" />
    <TextView
        android:id="@+id/movie_overview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/deskripsi" />
</LinearLayout>